--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </header>
 
     <!-- About Section-->
-    <section class="page-section mb-0" id="about" >
+    <section class="page-section mb-0" id="about">
         <div class="container">
             <h2 class="page-section-heading text-center text-uppercase mb-5" style="color: darksalmon;">って何</h2>
 
@@ -55,7 +55,7 @@
                     199801生まれの海洋生物。5歳
                 </p>
                 <h3>すぺっく</h3>
-                <img src="image/skillmap_202405.png" />
+                <img src="image/skillmap_202405.png" style="width: 100%;max-width: 700px;" />
                 <p>202405時点だよ</p>
             </div>
         </div>
@@ -103,28 +103,28 @@
         </div>
     </section>
 
-        <!-- About Section-->
-        <section class="page-section mb-0" id="love" >
-            <div class="container">
-                <h2 class="page-section-heading text-center text-uppercase mb-5" style="color: lightpink;">LOVE</h2>
-    
-                <div class="text-center">
-                    <h3>サンリオ</h3>
-                    <p class="lead">
-                        ばつ丸～～～～～～～！！！！！！！！！！！！！！！
-                    </p>
-                    <h3>ポケモン</h3>
-                    <p class="lead">
-                        最近の推しはパーモットさん
-                    </p>
-                    <h3>シール集め</h3>
-                    <p class="lead">
-                        無駄にシールを買い漁り、シール帳にペタペタ貼り付けてはニタニタ笑っている
-                    </p>
-    
-                </div>
+    <!-- About Section-->
+    <section class="page-section mb-0" id="love">
+        <div class="container">
+            <h2 class="page-section-heading text-center text-uppercase mb-5" style="color: lightpink;">LOVE</h2>
+
+            <div class="text-center">
+                <h3>サンリオ</h3>
+                <p class="lead">
+                    ばつ丸～～～～～～～！！！！！！！！！！！！！！！
+                </p>
+                <h3>ポケモン</h3>
+                <p class="lead">
+                    最近の推しはパーモットさん
+                </p>
+                <h3>シール集め</h3>
+                <p class="lead">
+                    無駄にシールを買い漁り、シール帳にペタペタ貼り付けてはニタニタ笑っている
+                </p>
+
             </div>
-        </section>
+        </div>
+    </section>
 
     <!-- Footer-->
     <footer class="footer text-center">
